--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,13 +5,15 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: white;
+  /* background-color: white; */
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto,
     segoe ui, arial, sans-serif;
-  background: transparent;
+  background-image: url('../img/cats.jpg');
+  background-repeat: round;
+  background-size: 10%;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -19,7 +21,7 @@ body {
   -ms-user-select: none;
   user-select: none;
   cursor: default;
-  background: rgb(244, 246, 249);
+  /* background: rgb(244, 246, 249); */
   /* color: rgb(183, 183, 183); */
 }
 
